[package]
name = "ir"
version = "0.3.0"
authors = ["Tibor Prokai <pro@sch.bme.hu>"]
repository = "https://github.com/tib888/ir"
description = "infrared remote control protocol(s)"
keywords = ["embedded", "remote", "ir", "nec"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"

[lib]

[dependencies]
nb = "0.1.1"
